# LearnOpenGLBlueprint

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: main.hpp
src/: main.cpp
